@@ -216,14 +216,15 @@ still be seen by players in the same room, however.
 
 COPY=\
 Command : COPY\n\r\
-Usage   : COPY ([NUMBER]) [ITEM TYPE]/[DIRECTION] \n\r\
+Usage   : COPY ([NUMBER]) [ITEM TYPE]/[DIRECTION]/([ABILITY ID] [NEW ID])\n\r\
 Example : copy joe\n\r\
 Example : copy beast sword\n\r\
 Example : copy Longsword@room\n\r\
 Example : copy Longsword@an orc\n\r\
 Example : copy east\n\r\
+Example : copy Spell_Fireball Spell_AlsoFireball\n\r\
 Short(s): \n\r\
-A command for the creation of items, mobs, and rooms. \
+A command for the creation of items, mobs, generic abilities, and rooms. \
 Enter COPY for more information on command usage.
 
 CREATE=\
